# sb-mirror

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  entrypoint.sh  nginx.conf
src/: download.rs  main.rs  routes.rs  segment.rs  sync.rs
