[package]
name = "sb-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.0.0-rc.2", default-features = false, features = [
    "macros",
] }
anyhow = "1.0.66"
csv = "1.1.6"
futures = "0.3.25"
indicatif = "0.17.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
reqwest = { version = "0.11.12", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
rusqlite = { version = "0.28", features = [
    "array",
    "modern_sqlite",
    "bundled",
] }
rusqlite_migration = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-util",
] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
